<resources>
    <string name="app_name">Digitable</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="timetable">Timetable</string>
    <string name="projects">Assignments</string>
    <string name="about">Help and Feedback</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="priority_values">
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
    </string-array>

    <string-array name="weekday_values">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>


    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="title_assignment_list">Assignments</string>
    <string name="title_assignment_detail">Assignment Detail</string>
    <string name="home">Home</string>
    <string name="reader">Reader</string>
    <string name="title_course_list">Courses</string>
    <string name="title_course_detail">Course Detail</string>
    <string name="courses">Courses</string>
    <string name="title_activity_timetable">TimetableActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="phone_no">0800000000</string>
    <string name="email">me@me.com</string>


    <string name="title_story_list">Reader</string>
    <string name="title_story_detail">Story</string>

    <!--engineering keywords==></-->
    <string name="keyword_ml">machine learning</string>
    <string name="keyword_software_dev">software development</string>
    <string name="keyword_fluid_mech">fluid mechanics</string>
    <string name="keyword_thermo">engineering thermodynamics</string>
    <string name="keyword_phil">philosophy</string>
    <string name="keyword_puzzles">logic puzzles</string>
    <string name="keyword_startup">startups and entrepreneurship</string>
    <string name="keyword_metmat">materials engineering</string>
    <string name="keyword_agric">agriculture</string>


    <string name="title_activity_setup_reader">SetupReaderActivity</string>
    <string name="assignments_empty">You don\'t have any pending assignments. Tap the \'+\' button
        to add one.
    </string>
    <string name="courses_empty">You haven\'t added any courses yet. Tap the \'+\' button
        to add one.
    </string>
    <string name="priority_high">HIGH</string>
    <string name="priority_low">LOW</string>
    <string name="priority_normal">NORMAL</string>

    <string name="title_activity_reminder">ReminderActivity</string>
    <string name="menu_item_clear_all">Clear All</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_delete">Delete</string>
    <string name="about_header">About</string>
    <string name="about_digitable">Digitable helps you keep track of your lecture and assignments
        schedule
    </string>
    <string name="help_header">Help</string>
    <string name="help_text">Learn how to use Digitable better</string>
    <string name="help_btn_text">Get Help</string>
</resources>
