<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_day"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_reader"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/reader"/>
        <item
            android:id="@+id/nav_timetable"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/timetable"/>
        <item
            android:id="@+id/nav_courses"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/courses"/>
        <item
            android:id="@+id/nav_projects"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/projects"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/about"/>
    </group>


</menu>
