<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.shalvahadebayo.digitable.AboutActivity">

        <android.support.v7.widget.CardView
            android:id="@+id/about_card_view"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@android:color/background_dark"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical"
                          android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/about_header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/about_header"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/about_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/about_digitable"
                    android:textSize="18sp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/help_card_view"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@android:color/background_dark"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:padding="@dimen/activity_horizontal_margin">


                <TextView
                    android:id="@+id/help_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_header"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:gravity="center"
                              android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center_vertical"
                        android:text="@string/help_text"
                        android:textSize="18sp"/>

                    <Button android:id="@+id/help_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:background="@color/colorAccent"
                            android:onClick="launchHelp"
                            android:padding="8dp"
                            android:text="@string/help_btn_text"
                            android:textColor="@android:color/white"/>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/feedback_card_view"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@android:color/background_dark"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp">

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical"
                          android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/feedback_header"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Feedback?"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/feedback_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Contact us:"
                    android:textSize="18sp"/>


                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:padding="4dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center_vertical"
                        android:text="@string/email"
                        android:textSize="18sp"/>

                    <ImageButton android:id="@+id/email_btn"
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:onClick="callOrMail"
                                 android:scaleType="center"
                                 android:src="@android:drawable/sym_action_email"/>

                </LinearLayout>

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:padding="4dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center_vertical"
                        android:text="@string/phone_no"
                        android:textSize="18sp"/>

                    <ImageButton android:id="@+id/call_btn"
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:onClick="callOrMail"
                                 android:scaleType="center"
                                 android:src="@android:drawable/ic_menu_call"/>

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>
